--- a/views/tienda.html
+++ b/views/tienda.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
 </head>
-<body>
+<body >
     <header class="animate__animated animate__bounce"> 
         <nav class="navbar navbar-expand-lg navbar-dark bg-success">
             <div class="container-fluid">
@@ -31,7 +31,7 @@
           </nav>
     <main>
         <div class="container mt-5">
-            <div class="row row-cols-1 row-cols-md-5 g-3">
+            <div class="row row-cols-1 row-cols-md-5 g-3" id="fila">
 
             </div>
         </div>
