modificacion de pagina

--- a/views/tienda.html
+++ b/views/tienda.html
@@ -51,7 +51,7 @@
                 <div class="container">
                   <div class="row">
                     <div class="col-12 col-md-4">
-                        <img src="../img/nacional.png" alt="" class="img-fluid w-100" id="imagenProducto">
+                        <img src="../img/atletico.jpg" alt="" class="img-fluid w-100" id="imagenProducto">
                     </div>
                     <div class="col-12 col-md-8">
                         <h5 id="nombreProducto">nombre de producto</h5>
