--- a/views/acercaDe.html
+++ b/views/acercaDe.html
@@ -12,7 +12,7 @@
     <header class="animate__animated animate__bounce"> 
         <nav class="navbar navbar-expand-lg navbar-dark bg-success">
             <div class="container-fluid">
-              <a class="navbar-brand" href="index.html">Atletico Nacional <i class="fas fa-futbol"></i></i></a>
+              <a class="navbar-brand" href="../index.html">Atletico Nacional <i class="fas fa-futbol"></i></i></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
