--- a/views/equipo.html
+++ b/views/equipo.html
@@ -5,8 +5,78 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
 </head>
 <body>
-    
+    <header class="animate__animated animate__bounce"> 
+        <nav class="navbar navbar-expand-lg navbar-dark bg-success">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="../index.html">Atletico Nacional <i class="fas fa-futbol"></i></i></a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="../index.html">INICIO</a>
+                  </li>
+                </ul>
+                <form class="d-flex">
+                  <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                  <button class="btn btn-outline-success bg-white text-dark" type="submit">Search</button>
+                </form>
+              </div>
+            </div>
+          </nav>
+          <main>
+            <section class="mt-5 mb-5 border-success">
+                <div class="container">
+                  <div class="row row-cols-1 row-cols-md-3 g-4">
+                    <div class="col">
+                      <div class="card h-100">
+                        <img src="../img/card-1.jpg" class="card-img-top" alt="card-1">
+                        <div class="card-body">
+                          <h5 class="card-title text-success">Card title</h5>
+                          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col">
+                      <div class="card h-100">  
+                        <div class="card-body">
+                          <h5 class="card-title text-success">Card title</h5>
+                          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                          </div>
+                        <img src="../img/card-5.jpeg" class="card-img-top" alt="card-2">
+                      </div>
+                    </div>
+                    <div class="col">
+                      <div class="card h-100">
+                        <img src="../img/card-6.jpg" class="card-img-top" alt="card-3">
+                        <div class="card-body">
+                          <h5 class="card-title text-success">Card title</h5>
+                          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </section>
+              <section>
+                <div class="card border-success">
+                    <img src="../img/nacional1.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title text-success">ATLETICO NACIONAL</h5>
+                      <p class="card-text">El Atlético Nacional fue fundado oficialmente el 30 de abril de 1947, con el nombre de Club Atlético Municipal, por escritura pública n.º 2100 de la ciudad de Medellín2​ y fue uno de los dos equipos aceptados por la Dimayor para que representara al Departamento de Antioquia en el naciente Campeonato Profesional de Fútbol a disputarse en 1948.</p>
+                    </div>
+                  </div>
+              </section>
+          </main>
+          <footer>
+          </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/a2501e2248.js" crossorigin="anonymous"></script>
 </body>
 </html>
