se modifico tienda y se crea js

--- a/views/equipo.html
+++ b/views/equipo.html
@@ -21,6 +21,10 @@
                   <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="../index.html">INICIO</a>
                   </li>
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="../views/tienda.html">TIENDA</a>
+                  </li>
+
                 </ul>
                 <form class="d-flex">
                   <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
