modificacion de tienda

--- a/views/tienda.html
+++ b/views/tienda.html
@@ -27,7 +27,7 @@
                 </ul>
                 <ul class="navbar-nav mb-2 mb-lg-0">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">
+                    <a class="nav-link active" aria-current="page" href="#" id="botonCarrito">
                       <i class="fas fa-cart-arrow-down fa-2x"></i>
                       <span id="pildora" class="position-absolute top-10 start-10 translate-middle badge rounded-pill bg-danger invisible">
                         99+
@@ -53,7 +53,7 @@
           <div class="modal-dialog">
             <div class="modal-content">
               <div class="modal-header bg-success">
-                <h5 class="modal-title">Tienda de Atletico Nacional </h5>
+                <h5 class="modal-title text-white">Tienda de Atletico Nacional </h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
               </div>
               <div class="modal-body">
@@ -68,7 +68,7 @@
                         <h6 id="descripcion">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</h6>
                         <div class="mb-3">
                           <label class="form-label">Cantidad</label>
-                          <input type="number" class="form-control" id="cantidadProducto" value="1" min="0">
+                          <input type="number" class="form-control" id="cantidadProducto" value="1" min="0" >
                         </div>
                     </div>
                   </div>
@@ -81,6 +81,28 @@
             </div>
           </div>
           </div>
+    </section>
+    <section>
+      <div class="modal fade" id="modalVerCarrito">
+        <div class="modal-dialog">
+          <div class="modal-content ">
+            <div class="modal-header bg-success">
+              <h5 class="modal-title text-white">TIENDA VERDE</h5>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+              <div class="container" id="contenedorCarrito">
+
+              </div>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+              <button type="button" class="btn btn-primary bg-success">Comprar</button>
+              <button type="button" class="btn btn-primary bg-success" id="limpiar">limpiar</button>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
     <footer>
 
