se modifica botones de tienda

--- a/views/tienda.html
+++ b/views/tienda.html
@@ -96,9 +96,10 @@
               </div>
             </div>
             <div class="modal-footer">
-              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
               <button type="button" class="btn btn-primary bg-success">Comprar</button>
               <button type="button" class="btn btn-primary bg-success" id="limpiar">limpiar</button>
+              <button type="button" class="btn btn-primary bg-success" id="convert">convertir</button>
             </div>
           </div>
         </div>
