se crea ultima modificacion de la tienda

--- a/views/tienda.html
+++ b/views/tienda.html
@@ -96,17 +96,62 @@
               </div>
             </div>
             <div class="modal-footer">
+              <h3 id="total">Total</h3>
               <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
-              <button type="button" class="btn btn-primary bg-success">Comprar</button>
+              <button type="button" class="btn btn-primary bg-success" id="comprar">Comprar</button>
               <button type="button" class="btn btn-primary bg-success" id="limpiar">limpiar</button>
-              <button type="button" class="btn btn-primary bg-success" id="convert">convertir</button>
+              <button type="button" class="btn btn-primary bg-success" id="convertir">convertir</button>
+              
             </div>
           </div>
         </div>
       </div>
     </section>
-    <footer>
-
+    <section>
+      <div class="modal fade " id="modalcompra">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header bg-success">
+              <h5 class="modal-title text-white">Compra </h5>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+              <div class="container">
+                <div class="row">
+                  <div class="col-12">
+                    <h4 id="mensajecompra"></h4>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <hr class="bg-success">
+    <footer class="bg-white  mt-4 p-3 bg-success">
+      <div class="container text-dark">
+        <div class="row">
+          <div class="col-12 col-md-4">
+            <p>Equipo profesional </p>
+            <p>Atletico Nacional</p>
+            <p>Edison mesa tapias &copy;</p>
+          </div>
+          <div class="col-12 col-md-4">
+            <p>Equipo profesional </p>
+            <p>Atletico Nacional</p>
+            <p>Edison mesa tapias &copy;</p>
+          </div>
+          <div class="col-12 col-md-4">
+            <p>Equipo profesional </p>
+            <p>Atletico Nacional</p>
+            <p>Edison mesa tapias &copy;</p>
+          </div>
+        </div>
+      </div>
     </footer>
     <script src="../js/controlador.js"type="module"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
