--- a/views/equipo.html
+++ b/views/equipo.html
@@ -24,12 +24,7 @@
                   <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="../views/tienda.html">TIENDA</a>
                   </li>
-
                 </ul>
-                <form class="d-flex">
-                  <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                  <button class="btn btn-outline-success bg-white text-dark" type="submit">Search</button>
-                </form>
               </div>
             </div>
           </nav>
@@ -41,16 +36,16 @@
                       <div class="card h-100">
                         <img src="../img/card-1.jpg" class="card-img-top" alt="card-1">
                         <div class="card-body">
-                          <h5 class="card-title text-success">Card title</h5>
-                          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                        </div>
+                          <h5 class="card-title text-success">Momento Verdolaga</h5>
+                          <p class="card-text">
+                        </div>Jugadores son captados en cada una de sus celebraciones para el recuerdo verdologa creando momentos historicos</p>
                       </div>
                     </div>
                     <div class="col">
                       <div class="card h-100">  
                         <div class="card-body">
-                          <h5 class="card-title text-success">Card title</h5>
-                          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                          <h5 class="card-title text-success">Momento Verdolaga</h5>
+                          <p class="card-text">Jugadores son captados en cada una de sus celebraciones para el recuerdo verdologa creando momentos historicos</p>
                           </div>
                         <img src="../img/card-5.jpeg" class="card-img-top" alt="card-2">
                       </div>
@@ -59,8 +54,8 @@
                       <div class="card h-100">
                         <img src="../img/card-6.jpg" class="card-img-top" alt="card-3">
                         <div class="card-body">
-                          <h5 class="card-title text-success">Card title</h5>
-                          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                          <h5 class="card-title text-success">Momento Verdolaga</h5>
+                          <p class="card-text">Jugadores son captados en cada una de sus celebraciones para el recuerdo verdologa creando momentos historicos</p>
                         </div>
                       </div>
                     </div>
@@ -77,7 +72,26 @@
                   </div>
               </section>
           </main>
-          <footer>
+          <footer class="bg-white  mt-4 p-3 bg-success">
+            <div class="container text-dark">
+              <div class="row">
+                <div class="col-12 col-md-4">
+                  <p>Equipo profesional </p>
+                  <p>Atletico Nacional</p>
+                  <p>Edison mesa tapias &copy;</p>
+                </div>
+                <div class="col-12 col-md-4">
+                  <p>Equipo profesional </p>
+                  <p>Atletico Nacional</p>
+                  <p>Edison mesa tapias &copy;</p>
+                </div>
+                <div class="col-12 col-md-4">
+                  <p>Equipo profesional </p>
+                  <p>Atletico Nacional</p>
+                  <p>Edison mesa tapias &copy;</p>
+                </div>
+              </div>
+            </div>
           </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
